<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, TopeveryActivity!</string>
	<string name="app_name">全民城管</string>
	<string name="app_name_mark">市 民 终 端</string>
	<string name="explain_context">\t\t"市民终端 是一款提供市民参与城市管理的手机软件,当市民发现与城市管理有关的问题,可以随时随地通过"随手拍"将有关问题拍照上报,相关责任部门将进行处理。	</string>
	<string name="explain_context2" />
	<string name="explain_context3" />
	<string name="zhuban_context"> \t\t主办单位:城市管理局\n</string>
<!-- 	<string name="zhuban_context"> \t\t主办单位:深圳市龙华新区城市管理局\n</string> -->
	<string name="versionName">v1.2</string>	
	
	<string name = "login">登录</string>
	<string name = "login_out">退出</string>
	<string name = "register">注册</string>
	<string name = "new_register">新用户注册>></string>
	<string name = "account">用户名</string>
	<string name = "password">密码</string>
	<string name ="remember_pw">记住密码</string>
	<string name ="find_pw">忘记密码>></string>
	<string name ="reset_pw">重置密码</string>
	<string name="drafts">草稿箱</string>
	
	<string name ="confirm">确定</string>
	<string name ="concel">取消</string>
	
	<string name="authou_success">授权成功</string>
	<string name="authou_cancel">取消授权</string>
	<string name="authou_deny">授权被拒绝</string>
	
	<string name="register_hint">请输入注册用户名</string>
	<string name="register_pw">请输入密码</string>
	<string name="register_phone">请输入电话号码</string>
	<string name="register_confirm_pw">请再次输入密码</string>
	
	<string name="last_step">上一步</string>
	<string name="next_step">下一步</string>
	
	
	<string name="old_pw">请输入原始密码</string>
	<string name="new_pw">请输入新密码</string>
	<string name="confirm_new_pw">请再次输入新密码</string>
	<string name = "clear_cache_data">清理缓存数据</string>
	
	<!-- net -->
	<string name="net_error">网络故障</string>
	<string name="register_success">注册成功</string>
	<string name="register_fail">注册失败</string>
	<string name="processing">正在处理，请稍后...</string>
	<string name="login_success">登录成功</string>
	<string name="login_fail">登录失败</string>
	<string name="reset_success">密码重置成功</string>
	<string name="reset_fail">密码重置失败</string>
	<string name="report_evt_success">案件上报成功</string>
	<string name="report_evt_fail">案件上报失败</string>
	
	<!-- 二位码 -->
	<string name = "wechat_group_number">济南市城市管理局</string>
	<!-- activity title -->
	<string name="title_reset_pw">重置密码</string>	
	<string name="title_account">账号信息</string>
		
	<string name="tab_system">系统设置</string>
	<string name="save">保存</string>
	<string name="empty_phone">获取电话号码失败，请设置电话号码</string>
	<string name="report_des_notice">（必填）请用文字或录音描述事发位置和问题。</string>
	<string name="report_location_notice">点击右侧按钮进入地图进行定位</string>
	<string name="report_condition">您还未验证电话号码，是否验证？</string>
	<string name="report_identify_failed">验证失败</string>
	<string name="event_state_unaccepte">未受理</string>
	<string name="history_un_accepte">您查询的受理号正在受理中。</string>
	<string name="identify_name">姓名</string>
	<string name="identify_notice">请广大市民放心填写个人信息，我中心会保护个人隐私，防止资料外泄。</string>
	
	<!-- 相册 -->
	<string name="all_pic">所有图片</string>
	<!--聊天相关 -->
	<string name="actionbar_msg">聊天</string>
	<string name="actionbar_conversation">会话</string>
	<string name="actionbar_contact">通讯录</string>
	<string name="actionbar_me">我</string>
	<string name="search_friend_hit">邮箱/用户名/ID</string>
	<string name="take_monent">稍等片刻</string>
	<string name="add_friend">添加朋友</string>
	<string name="fetch_user_info_failed">用户信息获取失败</string>
	<string name="create_group">创建群聊</string>
	<string name="creating_hint">创建中</string>
	<string name="create_user">我们正在建立您的个人档案</string>
	<string name="search_friend_title_bar">搜索结果</string>
	<string name="friend_request_hit">请你输入你的添加好友请求</string>
	<string name="friend_request_input_hit">我是…</string>
	<string name="send_request">发送请求</string>
	<string name="copy">复制</string>
	<string name="forward_msg">转发</string>
	<string name="copy_toast">已复制</string>
	<string name="delete">删除</string>
	<string name="delete_conv">删除该聊天</string>
	<string name="create_file_failed">创建文件失败</string>
	<string name="record_voice_hint">按住 语音爆料</string>
	<string name="cancel_record_voice_hint">松开手指，取消发送</string>
	<string name="send_voice_hint">松开 录音结束</string>
	<string name="move_to_cancel_hint">手指上滑，取消发送</string>
	<string name="rest_record_time_hint">还可以说%s秒</string>
	<string name="combine_title">(%s)</string>
	<string name="file_not_found_toast">文件丢失</string>
	<string name="not_select_photo">你没有选择照片，请重新选择</string>
	<string name="picture_not_found">没有找到您想要的图片</string>
	<string name="loading">正在加载</string>
	<string name="load_failed_toast">加载失败</string>
	<string name="info_null">未填写</string>
	<string name="change_avatar">修改头像</string>
	<string name="operation">操作</string>
	<string name="origin_picture">原图</string>
	<string name="choose">选择</string>
	<string name="send">发送</string>
	<string name="send_message">发消息</string>
	<string name="sending_hint">正在发送</string>
	<string name="resend_message_hint">重发该消息？</string>
	<string name="resend_commit">重发</string>
	<string name="cancel">取消</string>
	<string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
	<string name="load_origin_image">查看原图</string>
	<string name="downloading_hint">正在下载</string>
	<string name="download_completed_toast">下载完成</string>
	<string name="choose_album_title">选择相册</string>
	<string name="friend_opt_change_name">修改备注</string>
	<string name="friend_opt_delete">删除好友</string>
	<string name="friend_opt_detail">详细资料</string>
	<string name="detail_info">个人资料</string>
	<string name="voice_length">10"</string>
	<string name="time_too_short_toast">时间太短！</string>
	<string name="file_fetch_failed">文件获取失败</string>
	<string name="record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许， 否则将无法使用录音功能
	</string>
	<string name="record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
	<string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
	<string name="picture">图片</string>
	<string name="type_picture">[图片]</string>
	<string name="type_voice">[语音]</string>
	<string name="type_location">[位置]</string>
	<string name="video">视频</string>
	<string name="group_notification">[群成员变动]</string>
	<string name="type_custom">[自定义消息]</string>
	<string name="yesterday">昨天</string>
	<string name="before_dawn">凌晨</string>
	<string name="morning">早上</string>
	<string name="afternoon">下午</string>
	<string name="night">晚上</string>
	<string name="monday">周一</string>
	<string name="tuesday">周二</string>
	<string name="wednesday">周三</string>
	<string name="thursday">周四</string>
	<string name="friday">周五</string>
	<string name="saturday">周六</string>
	<string name="sunday">周日</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="second">秒</string>
	<string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
	<string name="sdcard_not_exist_toast">暂无外部存储</string>
	<string name="camera_not_prepared">摄像头尚未准备好</string>
	<string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
	
	<string-array 
	    name="array_help_function"
	    >
	    <item>系统升级</item>
	    <item>关于我们</item>
	</string-array>
</resources>
