<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="#FFFFF4">
	<LinearLayout
		android:id="@+id/main_dialog_linearlayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_margin="5dip"
			android:background="@drawable/ic_launcher"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#000000"
			android:text="@string/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout
		android:layout_marginTop="3dip"
		android:layout_below="@+id/main_dialog_linearlayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center">
		<TextView
			android:layout_gravity="right"
			android:layout_marginRight="10dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/versionName"
			android:textColor="#d0d0d0" />
		<TextView
			android:layout_width="250dip"
			android:layout_height="1dip"
			android:background="#d0d0d0" />
		<ScrollView
			android:layout_marginTop="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical">
					<TextView
					    android:layout_marginLeft="15dip"
					    android:layout_marginRight="15dip"
						android:lineSpacingExtra="2dip"
						android:textColor="#000000"
						android:textStyle="bold"
						android:text="@string/explain_context"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView
					    android:visibility="gone"
						android:lineSpacingExtra="2dip"
						android:textColor="#000000"
						android:textStyle="bold"
						android:text="@string/explain_context2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
					<TextView
					    android:layout_marginLeft="15dip"
					    android:layout_marginRight="15dip"
						android:lineSpacingExtra="2dip"
						android:textColor="#000000"
						android:textStyle="bold"
						android:text="@string/explain_context3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
				</LinearLayout>
				<TextView
						android:lineSpacingExtra="2dip"
						android:textColor="#000000"
						android:textStyle="bold"
						android:text="@string/zhuban_context"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:orientation="horizontal">
		<Button
			android:id="@+id/main_dialog_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@xml/button_dialog_sure_long"
			android:paddingLeft="25dip"
			android:text="确  定"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFF" />
	</LinearLayout>
</RelativeLayout>