<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp"
    android:background="@color/bg_white"
    >
   <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_edit_grey_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txt_register_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/register_hint"
                android:textColorHint="@color/hint_grey"
                />

            <ImageButton
                android:id="@+id/btn_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@color/transparent"
                android:src="@drawable/selector_delete" />
        </LinearLayout>

   <EditText 
            android:id="@+id/txt_register_phone"
            android:layout_width="match_parent"
        	android:layout_height="48dp"
        	android:hint="@string/register_phone"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/shape_edit_grey_bg"
        	android:paddingLeft="10dp"
        	android:textColorHint="@color/hint_grey"
        	android:inputType="phone"
            />
    <EditText 
            android:id="@+id/txt_register_pw"
            android:layout_width="match_parent"
        	android:layout_height="48dp"
        	android:hint="@string/register_pw"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/shape_edit_grey_bg"
        	android:paddingLeft="10dp"
        	android:textColorHint="@color/hint_grey"
            />
    
    <EditText 
            android:id="@+id/txt_register_confirm_pw"
            android:layout_width="match_parent"
        	android:layout_height="48dp"
        	android:hint="@string/register_confirm_pw"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/shape_edit_grey_bg"
        	android:paddingLeft="10dp"
        	android:textColorHint="@color/hint_grey"
            />
    
    <Button 
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_green_btn_bg"
        android:textColor="@color/white"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
